tests/NormalTests/paczka1/fuzzy1/19463026.err
Error in line 3: rVDutW1 S661 73,9
Error in line 11: hIJDfJE S661 9,3
Error in line 18: C7Ex9KdQ A602 88,5
Error in line 29: hIJDfJE S661 37,2
Error in line 34: A189 S661 44,8
Error in line 37: A189 A113 53,2
Error in line 31: hIJDfJE A602 41,5
